[gd_scene load_steps=2 format=2]

[ext_resource path="res://TCPclient.gd" type="Script" id=1]

[node name="TCPclient" type="Node"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="TextEdit" type="TextEdit" parent="Control"]
margin_left = 128.0
margin_top = 120.0
margin_right = 315.0
margin_bottom = 149.0

[node name="Button" type="Button" parent="Control"]
margin_left = 340.0
margin_top = 126.0
margin_right = 383.0
margin_bottom = 146.0
text = "send"

[node name="Connect" type="Button" parent="Control"]
margin_left = 211.0
margin_top = 222.0
margin_right = 254.0
margin_bottom = 242.0
text = "connect"

[node name="State" type="Button" parent="Control"]
margin_left = 324.0
margin_top = 226.0
margin_right = 336.0
margin_bottom = 246.0
text = "state"

[node name="Disconnect" type="Button" parent="Control"]
margin_left = 203.0
margin_top = 256.0
margin_right = 285.0
margin_bottom = 276.0
text = "disconnect"

[node name="Getdata" type="Button" parent="Control"]
margin_left = 430.0
margin_top = 215.0
margin_right = 442.0
margin_bottom = 235.0
text = "getdata"

[connection signal="pressed" from="Control/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Control/Connect" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Control/State" to="." method="_on_State_pressed"]
[connection signal="pressed" from="Control/Disconnect" to="." method="_on_Disconnect_pressed"]
[connection signal="pressed" from="Control/Getdata" to="." method="_on_Getdata_pressed"]
